--- a/validation/src/assets/css/create.css
+++ b/validation/src/assets/css/create.css
@@ -8,7 +8,7 @@ h1, h2, h3, h4, h5, h6, p, blockquote, pre,
 a, abbr, acronym, address, big, cite, code,
 del, dfn, em, img, ins, kbd, q, s, samp,
 small, strike, strong, sub, sup, tt, var,
-b, u, i, center,
+b, u,  center,
 dl, dt, dd, ol, ul, li,
 fieldset, form, label, legend,
 table, caption, tbody, tfoot, thead, tr, th, td,
@@ -151,7 +151,7 @@ input{
     text-align: center;
     margin-top: 30px;
 }
-button{
+.sub{
     width: 460px;
     height: 52px;
     background: #BEE1FF;
@@ -163,5 +163,19 @@ button{
     text-align: center;
     line-height: 25px;    
 }
-
+.err{
+    display: inline;
+    background: #F5A623;
+    border-radius: 4px;
+    font-family: Roboto-Regular;
+    font-size: 14px;
+    color: #FFFFFF;
+    letter-spacing: 0;
+    text-align: left;
+    line-height: 14px;
+    padding: 5px;
+    position: relative;
+    top: -60px;
+    left: 470px;
+}
 
