--- a/validation/src/assets/css/general.css
+++ b/validation/src/assets/css/general.css
@@ -8,7 +8,7 @@ h1, h2, h3, h4, h5, h6, p, blockquote, pre,
 a, abbr, acronym, address, big, cite, code,
 del, dfn, em, img, ins, kbd, q, s, samp,
 small, strike, strong, sub, sup, tt, var,
-b, u, i, center,
+b, u,  center,
 dl, dt, dd, ol, ul, li,
 fieldset, form, label, legend,
 table, caption, tbody, tfoot, thead, tr, th, td,
@@ -51,7 +51,8 @@ table {
 .wrap{
     margin: 0 auto;
     width: 1024px;
-    height: 768px;    
+    height: 768px;
+    font: normal;    
 }
 
 .line{
@@ -71,7 +72,8 @@ table {
 .now-box{
     position: relative;
     top: -9px;
-    left: 380px;    
+    left: 380px;
+
 }
 .now{
     width: 8px;
@@ -104,7 +106,7 @@ table {
     color: #0275D8;
     position: relative;
     top:-2px;
-    left: -2px;    
+    left: -2px;      
 }
 
 h1{
@@ -175,7 +177,7 @@ label{
     width: 456px;
     height: 52px;
 }
-button{
+.sub{
     width: 460px;
     height: 52px;
     background: #BEE1FF;
@@ -201,10 +203,26 @@ input{
 .f{
     margin-left: 130px;
 }
-i{
+.opt{
     font-family: Roboto-Light;
     font-size: 16px;
     color: #000000;
     letter-spacing: 0;
     line-height: 24px;
+    display: inline;
+}
+.err{
+    display: inline;
+    background: #F5A623;
+    border-radius: 4px;
+    font-family: Roboto-Regular;
+    font-size: 14px;
+    color: #FFFFFF;
+    letter-spacing: 0;
+    text-align: left;
+    line-height: 14px;
+    padding: 5px;
+    position: relative;
+    top: -60px;
+    left: 470px;
 }
