--- a/validation/src/assets/css/picture.css
+++ b/validation/src/assets/css/picture.css
@@ -8,7 +8,7 @@ h1, h2, h3, h4, h5, h6, p, blockquote, pre,
 a, abbr, acronym, address, big, cite, code,
 del, dfn, em, img, ins, kbd, q, s, samp,
 small, strike, strong, sub, sup, tt, var,
-b, u, i, center,
+b, u,   center,
 dl, dt, dd, ol, ul, li,
 fieldset, form, label, legend,
 table, caption, tbody, tfoot, thead, tr, th, td,
@@ -160,7 +160,7 @@ input{
     left: 170px;;
 }
 
-button{
+.sub{
     width: 460px;
     height: 52px;
     background: #BEE1FF;
@@ -173,5 +173,6 @@ button{
     line-height: 25px; 
     margin-top: 20px;  
     position: relative;
-    top:-130px; 
+    top:-130px;     
+    opacity: 1;
 }
